--- a/react-1/package.json
+++ b/react-1/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "jss": "^10.0.0-alpha.17",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
