--- a/react-1/package.json
+++ b/react-1/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.19.0",
     "jss": "^10.0.0-alpha.17",
     "react": "^16.8.6",
+    "react-dnd": "^9.3.4",
+    "react-dnd-html5-backend": "^9.3.4",
     "react-dom": "^16.8.6",
     "react-jss": "^10.0.0-alpha.17",
     "react-scripts": "3.0.1"
